CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(algorithms)
ADD_SUBDIRECTORY(examples/bitree)
ADD_SUBDIRECTORY(examples/bit)
ADD_SUBDIRECTORY(examples/bistree)
ADD_SUBDIRECTORY(examples/chtbl)
ADD_SUBDIRECTORY(examples/clist)
ADD_SUBDIRECTORY(examples/compress)
ADD_SUBDIRECTORY(examples/dlist)
ADD_SUBDIRECTORY(examples/encrypt)
ADD_SUBDIRECTORY(examples/geometry)
ADD_SUBDIRECTORY(examples/graph)
ADD_SUBDIRECTORY(examples/graphalg)
ADD_SUBDIRECTORY(examples/heap)
ADD_SUBDIRECTORY(examples/list)
ADD_SUBDIRECTORY(examples/nummeths)
ADD_SUBDIRECTORY(examples/ohtbl)
ADD_SUBDIRECTORY(examples/pqueue)
ADD_SUBDIRECTORY(examples/queue)
ADD_SUBDIRECTORY(examples/recurse)
ADD_SUBDIRECTORY(examples/search)
ADD_SUBDIRECTORY(examples/set)
ADD_SUBDIRECTORY(examples/sort)
ADD_SUBDIRECTORY(examples/stack)
